<!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="change_dessert">Change dessert</string>
    <string name="order_label_text">Order:</string>
    <string name="name_text">Name</string>
    <string name="address_text">Address</string>
    <string name="Phone_text">Phone</string>
    <string name="Enter_phone_hint">Enter your phone</string>
    <string name="Enter_address_hint">Enter your address</string>
    <string name="Enter_name_hint">Enter your name</string>
    <string name="note_text">Note</string>
    <string name="Enter_note_hint">Enter note</string>
    <string name="Choose_text">Choose a delivery method:</string>
    <string name="same_day_text">Same day messenger service</string>
    <string name="next_day_text">Next day ground delivery</string>
    <string name="pick_up_text">Pick up</string>
    <string name="Chocolate_text">Chocolate syrup</string>
    <string name="sprinkles_text">Sprinkles</string>

    <string name="contact_message">You selected Contact.</string>
    <string name="order_message">You selected Order.</string>
    <string name="status_message">You selected Status.</string>
    <string name="favorites_message">You selected Favorites.</string>

    <string name="contact_text">Contact</string>
    <string name="order_text">Order</string>
    <string name="status_text">Status</string>
    <string name="favorites_text">Favorite</string>
    <string name="date_btn">DATE</string>


    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datepicker" />
    <string name="date" />

</resources>
